mobile abaptive fix

--- a/app/layout/modal.html
+++ b/app/layout/modal.html
@@ -14,7 +14,7 @@
       </label>
       <label class="modal__checkbox" for="modal-check">Я даю согласие на обработку моих персональных данных согласно 
         <input class="modal__check" id="modal-check" type="checkbox"/>
-        <div class="modal__custom-check"></div><a class="modal__link link--active" href="#">политике конфиденциальности         </a>
+        <div class="modal__custom-check"></div><a class="modal__link" href="#">политике конфиденциальности         </a>
       </label>
       <button class="btn modal__btn" type="submit">Отправить запрос</button>
       <div class="modal__close">
