--- a/app/layout/section-contact.html
+++ b/app/layout/section-contact.html
@@ -13,7 +13,7 @@
     </label>
     <label class="contact-form__checkbox contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно 
       <input class="contact-form__field" id="check" type="checkbox"/>
-      <div class="contact-form__custom-check"></div><a class="link contact-form__link" href="#">политике конфиденциальности </a>
+      <div class="contact-form__custom-check"></div><a class="contact-form__link" href="#">политике конфиденциальности </a>
     </label>
     <button class="btn contact-form__btn" type="submit">Отправить запрос</button>
   </form>
