--- a/app/layout/section-objects.html
+++ b/app/layout/section-objects.html
@@ -1,16 +1,18 @@
 
 <div class="container">
   <!--SLIDER BUTTON START-->
-  <svg class="objects-slider__icon">
+  <svg class="objects-slider__icon objects-slider__prev">
+    <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
+  </svg>
+  <svg class="objects-slider__icon objects-slider__next">
     <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
   </svg>
   <!--SLIDER BUTTON END -->
   <div class="objects__title">
-    <div class="container">
-      <div class="grid">
-        <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-        <h2 class="title">Наши объекты</h2>
-      </div>
+    <!--.container-->
+    <div class="grid">
+      <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+      <h2 class="title">Наши объекты</h2>
     </div>
   </div>
   <div class="objects-slider">
