--- a/app/pug/layout/modal.pug
+++ b/app/pug/layout/modal.pug
@@ -11,7 +11,7 @@
             label( for="modal-check").modal__checkbox Я даю согласие на обработку моих персональных данных согласно 
                 input#modal-check(type="checkbox").modal__check
                 .modal__custom-check
-                a(href="#").modal__link.link--active политике конфиденциальности         
+                a(href="#").modal__link политике конфиденциальности         
             button(type="submit").btn.modal__btn Отправить запрос
             .modal__close
                 .close
