--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -10,5 +10,5 @@
             label( for="check").contact-form__checkbox.contact-form__title Я даю согласие на обработку моих персональных данных согласно 
                 input#check(type="checkbox").contact-form__field 
                 .contact-form__custom-check
-                a(href="#").link.contact-form__link политике конфиденциальности 
+                a(href="#").contact-form__link политике конфиденциальности 
             button(type="submit").btn.contact-form__btn Отправить запрос
