--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -8,7 +8,7 @@
         <svg>
           <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
         </svg></a></div>
-    <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a></div>
+    <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-82</a></div>
     <div class="footer-newsletter">
       <!--FORM START-->
       <form class="footer-newsletter__form" action="">
@@ -18,7 +18,7 @@
         <button class="btn footer-newsletter__btn">Хочу быть в курсе!</button>
       </form>
       <!--FORM END          -->
-    </div><a class="arrow-btn footer-btn" href="#header">
+    </div><a class="arrow-btn footer-btn" href="#">
       <div class="arrow-btn__icon">
         <svg class="icon">
           <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
@@ -30,17 +30,17 @@
     </div>
     <div class="footer-social">
       <h6 class="footer-social__title">МЫ В СОЦСЕТЯХ</h6>
-      <div class="footer-social__icons"><a class="footer-social__link" href="#header">
+      <div class="footer-social__icons"><a class="footer-social__link" href="#">
           <div class="svg-wrap">
             <svg>
               <use xlink:href="images/main-page_icons-sprite.svg#facebook icon"></use>
             </svg>
-          </div></a><a class="footer-social__link" href="#header">
+          </div></a><a class="footer-social__link" href="#">
           <div class="svg-wrap">
             <svg>
               <use xlink:href="images/main-page_icons-sprite.svg#telegram"></use>
             </svg>
-          </div></a><a class="footer-social__link" href="#header">
+          </div></a><a class="footer-social__link" href="#">
           <div class="svg-wrap">
             <svg>
               <use xlink:href="images/main-page_icons-sprite.svg#insta icon"></use>
