--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -14,8 +14,8 @@
         .footer-contacts
             //-h5.footer-contacts__title Наши офисы
             a(href="mailto:angrobud@gmail.com").footer-link  angrobud@gmail.com
-            a(href="tel=+380509915883").footer-link +38(050) 991-58-83
-            a(href="tel=+380509915883").footer-link +38(050) 991-58-82
+            a(href="tel:+380509915883").footer-link +38(050) 991-58-83
+            a(href="tel:+380509915883").footer-link +38(050) 991-58-82
         .footer-newsletter
             //FORM START
             form(action="").footer-newsletter__form
@@ -24,7 +24,7 @@
                 input#newsletter(type="text").footer-newsletter__field
                 button.btn.footer-newsletter__btn Хочу быть в курсе!
             //FORM END          
-        a.arrow-btn.footer-btn(href="#header")
+        a.arrow-btn.footer-btn(href="#")
             .arrow-btn__icon
                 svg.icon
                     use(xlink:href="images/main-page_icons-sprite.svg#arrow")
@@ -35,15 +35,15 @@
         .footer-social
             h6.footer-social__title МЫ В СОЦСЕТЯХ
             .footer-social__icons
-                a(href="#header").footer-social__link
+                a(href="#").footer-social__link
                     .svg-wrap
                         svg
                             use(xlink:href="images/main-page_icons-sprite.svg#facebook icon")
-                a(href="#header").footer-social__link
+                a(href="#").footer-social__link
                     .svg-wrap
                         svg
                             use(xlink:href="images/main-page_icons-sprite.svg#telegram")
-                a(href="#header").footer-social__link
+                a(href="#").footer-social__link
                     .svg-wrap
                         svg
                             use(xlink:href="images/main-page_icons-sprite.svg#insta icon")
