--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -216,11 +216,12 @@ section {
     padding: 100px 0 100px 0;
     background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
     @media (max-width: 576px) {
-        padding: 30px 0;
+        padding: 40px 0;
     }
     @media (max-width: 812px) and (orientation: landscape) {
-        padding: 100px 0 30px 0;
+        padding: 40px 0;
     }
 }
 
+//checkbox
 //slick
