--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -5,6 +5,7 @@
     overflow: hidden;
     @media (max-width: 576px) {
         padding: 30px 0 50px 0;
+        background: #FFFFFF;
     }
     @media (max-width: 812px) and (orientation: landscape) {
         padding: 30px 0 50px 0;
@@ -33,6 +34,7 @@
             font-size: 16px;
             line-height: 20px;
             margin: 0 0 10px 0;
+            padding: 0;
             &__title {
                 font-size: 19px;
                 line-height: 23px;
@@ -88,7 +90,7 @@
             grid-column: 1 / 13;
             grid-row: 2 / 3;
             text-align: center;
-            margin: 20px 0 30px 0;
+            margin: 0 0 30px 0;
             font-size: 16px;
             line-height: 20px;
             padding: 0;
@@ -97,7 +99,7 @@
             grid-column: 1 / 13;
             grid-row: 2 / 3;
             text-align: center;
-            margin: 20px 0 50px 0;
+            margin: 0 0 50px 0;
             font-size: 19px;
             line-height: 20px;
             padding: 0;
@@ -153,7 +155,7 @@
             line-height: 4rem;
         }
         @media (max-width: 576px) {
-            grid-column: 1 / 13;
+            grid-column: 2 / 12;
             grid-row: 3 / 4;
             margin: 0 0 40px 0;
             &__title {
@@ -162,7 +164,7 @@
             }
         }
         @media (max-width: 812px) and (orientation: landscape) {
-            grid-column: 1 / 13;
+            grid-column: 2 / 12;
             grid-row: 3 / 4;
             margin: 0 0 50px 0;
             &__title {
@@ -204,7 +206,7 @@
                 padding: 0 1rem 1rem;
             }
             svg {
-                @include size(35px);
+                @include size(40px);
             }
         }
         @media (max-width: 1200px) {
@@ -213,11 +215,15 @@
             }
         }
         @media (max-width: 576px) {
-            grid-column: 3 / 10;
+            grid-column: 3 / 11;
             grid-row: 4 / 5;
             &__title {
                 font-size: 24px;
                 line-height: 29px;
+                margin: 0 0 20px 0;
+            }
+            &__icons {
+                padding: 0 1rem .5rem;
             }
         }
         @media (max-width: 812px) and (orientation: landscape) {
@@ -239,12 +245,14 @@
         @media (max-width: 576px) {
             grid-column: 1 / 13;
             grid-row: 6 / 7;
-            margin: 50px 0 0 0;
+            margin: 15px 0 0;
+            font-size: 16px;
+            line-height: 20px;
         }
         @media (max-width: 812px) and (orientation: landscape) {
             grid-column: 1 / 13;
             grid-row: 6 / 7;
-            margin: 50px 0 0 0;
+            margin: 15px 0 0;
         }
     }
     .footer-newsletter {
@@ -253,7 +261,7 @@
         @media (max-width: 576px) {
             grid-column: 1 / 13;
             grid-row: 5 / 6;
-            margin-top: 30px;
+            margin-top: 50px;
         }
         @media (max-width: 812px) and (orientation: landscape) {
             grid-column: 2 / 12;
@@ -292,6 +300,8 @@
             @media (max-width: 576px) {
                 margin: 0 0 30px 0;
                 text-align: center;
+                font-size: 24px;
+                line-height: 29px;
             }
             @media (max-width: 812px) and (orientation: landscape) {
                 margin: 0 0 30px 0;
@@ -325,7 +335,7 @@
             grid-column: 4 / 7;
             grid-row: 2/4;
             margin: 0 0 0 1rem;
-            height: 4rem;
+            height: 50px;
             @media (max-width: 576px) {
                 font-size: 16px;
                 line-height: 20px;
