--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -3,9 +3,12 @@
     position: relative;
     background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%), url(../images/main-bg.jpg) 60% no-repeat;
     background-repeat: no-repeat;
-    background-size: cover;
     display: flex;
     color: $tw;
+    @media (max-width: 576px) {
+        background: url(../images/header-mobile.jpg) 50% no-repeat;
+        background-size: cover;
+    }
     &-content {
         text-align: right;
         display: flex;
@@ -34,6 +37,7 @@
             @media (max-width: 576px) {
                 font-size: 36px;
                 line-height: 44px;
+                width: 95%;
             }
             @media (min-width: 768px) and (orientation: portrait) {
                 font-size: 48px;
@@ -57,6 +61,7 @@
             }
             @media (max-width: 1024px) {
                 font-size: 22px;
+                width: 75%;
             }
             @media (max-width: 768px) {
                 font-size: 18px;
@@ -65,6 +70,7 @@
                 font-size: 16px;
                 padding-right: 20px;
                 margin-bottom: 100px;
+                width: 95%;
             }
             @media (max-width: 812px) and (orientation: landscape) {
                 font-size: 16px;
