--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -1,6 +1,9 @@
 .apartments {
     position: relative;
     height: 1150px;
+    @media (max-width: 576px) {
+        height: 1050px;
+    }
     @media (max-width: 812px) and (orientation: landscape) {
         height: 830px;
     }
@@ -11,6 +14,10 @@
     }
     .headline {
         line-height: 37px;
+        @media (max-width: 576px) {
+            line-height: 20px;
+            margin: 0 0 20px 2px;
+        }
     }
     &-head {
         grid-column: 1/7;
@@ -26,7 +33,8 @@
         @include pos($b: 50px, $l: 0);
         width: 36%;
         @media (max-width: 576px) {
-            @include pos($b: 30px, $l: 20px);
+            @include pos($b: 0, $l: 50%);
+            transform: translateX(-50%);
             width: 80%;
         }
         @media (max-width: 812px) and (orientation: landscape) {
@@ -44,7 +52,7 @@
             fill: #FFF3A6;
             transform: translateX(50%) rotate(180deg);
             @media (max-width: 576px) {
-                top: 65%;
+                top: 50%;
                 right: 13px;
             }
             @media (max-width: 812px) and (orientation: landscape) {
@@ -56,7 +64,7 @@
             z-index: 3;
             fill: #FFF3A6;
             @media (max-width: 576px) {
-                top: 65%;
+                top: 50%;
                 left: 8px;
             }
             @media (max-width: 812px) and (orientation: landscape) {
@@ -84,7 +92,7 @@
                 z-index: 2;
             }
             @media (max-width: 576px) {
-                @include pos($t: 250px, $l: 20px);
+                @include pos($t: 210px, $l: 20px);
                 width: calc(100% - 40px);
                 &:before {
                     display: none;
@@ -120,6 +128,9 @@
             //font-size: 24px;
             font-size: 32px;
             line-height: 44px;
+            @media (max-width: 576px) {
+                padding: 15px 0 5px;
+            }
             @media (max-width: 812px) and (orientation: landscape) {
                 grid-row: 1/2;
                 grid-column: 1/13;
@@ -130,6 +141,13 @@
             width: 100%;
             height: 370px;
             overflow: hidden;
+            position: relative;
+            &:before {
+                content: '';
+                @include pos($b: -1px, $l: 0);
+                @include size(100%, 16px);
+                background: #423C3A;
+            }
             @media (max-width: 812px) and (orientation: landscape) {
                 grid-row: 2/5;
                 grid-column: 1/7;
@@ -176,18 +194,37 @@
             line-height: 44px;
             text-align: center;
             padding: 0 .25rem;
+            @media (max-width: 576px) {
+                font-size: 24px;
+                line-height: 29px;
+                width: 75%;
+                justify-self: center;
+            }
             @media (max-width: 812px) and (orientation: landscape) {
                 grid-row: 3/4;
                 grid-column: 7/13;
                 margin-bottom: 35px;
                 padding: 0 .5rem;
+                font-size: 24px;
+                line-height: 29px;
             }
         }
         &__link {
+            @media (max-width: 576px) {
+                font-size: 16px;
+                line-height: 20px;
+                margin: 0 0 40px;
+                width: 75%;
+                justify-self: center;
+            }
             @media (max-width: 812px) and (orientation: landscape) {
                 grid-row: 4/5;
                 grid-column: 7/13;
-                margin: 0 0 20px;
+                margin: 0 0 40px;
+                font-size: 16px;
+                line-height: 20px;
+                width: 75%;
+                justify-self: center;
             }
             margin-bottom: 50px;
             text-transform: uppercase;
@@ -226,7 +263,7 @@
             @include size(45px, 85px);
             font-size: 50px;
         }
-        fill: #FFF3A6;
+        fill: #423C3A;
         cursor: pointer;
         transition: all .3s;
         &:hover {
