--- a/app/scss/modules/_section-articles.scss
+++ b/app/scss/modules/_section-articles.scss
@@ -12,6 +12,9 @@
         padding: 100px 0 50px 0;
         @include size(100%);
         pointer-events: none;
+        @media (max-width: 576px) {
+            padding: 40px 0;
+        }
         .grid {
             grid-template-rows: auto auto 1fr auto;
             @include size(100%);
@@ -39,6 +42,9 @@
         padding: 420px 0 300px 0;
         @media (max-width: 1366px) {
             padding: 290px 0 200px 0;
+        }
+        @media (max-width: 576px) {
+            padding: 250px 0 120px;
         }
     }
     &-tile__title {
