--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -15,7 +15,7 @@
         grid-row: 1 / 2;
         text-transform: uppercase;
         text-align: center;
-        margin-bottom: 80px;
+        margin-bottom: 40px;
         @media (max-width: 576px) {
             font-size: 24px;
             line-height: 29px;
@@ -32,15 +32,15 @@
         font-size: 1.25rem;
         @media (max-width: 576px) {
             font-weight: normal;
-            font-size: 18px;
+            font-size: 16px;
             line-height: 20px;
-            margin: 15px 0;
+            margin: 0;
         }
         @media (max-width: 812px) and (orientation: landscape) {
             font-weight: normal;
             font-size: 18px;
             line-height: 20px;
-            margin: 15px 0;
+            margin: 0;
         }
         &:nth-child(2) {
             grid-column: 1 / 5;
@@ -87,10 +87,16 @@
         border-bottom: 2px solid #FFFFFF;
         padding: .2rem 0;
         color: #FFFFFF;
+        @media (max-width: 576px) {
+            padding: 0;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            padding: 0;
+        }
     }
     &__custom-check {
         cursor: pointer;
-        @include pos($t: 50%, $l: -35px);
+        @include pos($t: 50%, $l: -30px);
         @include size(20px);
         transform: translateY(-50%);
         background: #FFFFFF;
@@ -124,14 +130,16 @@
             grid-column: 2 / 8;
         }
         @media (max-width: 576px) {
-            grid-column: 3 / 13;
+            grid-column: 2 / 13;
             grid-row: 5 / 6;
-            margin-top: 50px;
+            margin: 30px 0 0 0;
+            font-size: 12px;
+            line-height: 15px;
         }
         @media (max-width: 812px) and (orientation: landscape) {
-            grid-column: 3 / 12;
+            grid-column: 2 / 12;
             grid-row: 5 / 6;
-            margin-top: 50px;
+            margin-top: 30px;
         }
         &:hover {
             ~.contact-form__custom-check {
@@ -157,6 +165,7 @@
     &__link {
         display: inline;
         width: 100%;
+        text-decoration: underline;
     }
     &__btn {
         grid-column: 9 / 12;
@@ -165,13 +174,13 @@
             grid-column: 1 / 13;
             grid-row: 6 / 7;
             justify-self: center;
-            margin-top: 40px;
+            margin-top: 30px;
         }
         @media (max-width: 812px) and (orientation: landscape) {
             grid-column: 1 / 13;
             grid-row: 6 / 7;
             justify-self: center;
-            margin-top: 40px;
+            margin-top: 30px;
         }
         height: 4rem;
         align-self: flex-end;
