--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -15,7 +15,7 @@
         <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений   </h5>
         <label class="footer-newsletter__title" for="newsletter">Ваш e-mail</label>
         <input class="footer-newsletter__field" id="newsletter" type="text"/>
-        <button class="btn footer-newsletter__btn">Хочу быть в курсе!</button>
+        <button class="btn footer-newsletter__btn" type="submit">Хочу быть в курсе!</button>
       </form>
       <!--FORM END          -->
     </div><a class="arrow-btn footer-btn" href="#">
