--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -22,7 +22,7 @@
                 h5.footer-newsletter__headline Будьте в курсе спецпредложений   
                 label( for="newsletter").footer-newsletter__title Ваш e-mail
                 input#newsletter(type="text").footer-newsletter__field
-                button.btn.footer-newsletter__btn Хочу быть в курсе!
+                button(type="submit").btn.footer-newsletter__btn Хочу быть в курсе!
             //FORM END          
         a.arrow-btn.footer-btn(href="#")
             .arrow-btn__icon
