--- a/app/layout/section-contact.html
+++ b/app/layout/section-contact.html
@@ -2,18 +2,18 @@
 <div class="container">
   <form class="grid contact-form" action="">
     <h4 class="contact-form__headline">С удовольствием проконсультируем Вас!</h4>
-    <label class="contact-form__title" for="username">Ваше имя
-      <input class="contact-form__field" id="username" type="text" required="required"/>
+    <label class="contact-form__title" for="contact-username">Ваше имя
+      <input class="contact-form__field" id="contact-username" type="text" required="required"/><span class="alert__text contact__user-text">Ваше имя не указано</span>
     </label>
-    <label class="contact-form__title" for="tel">Телефон
-      <input class="contact-form__field" id="tel" type="tel" required="required"/>
+    <label class="contact-form__title" for="contact-tel">Телефон
+      <input class="contact-form__field" id="contact-tel" type="tel" required="required" placeholder="+380" pattern="[+]d{3}s[(]d{2}[)]sd{3}[-]d{2}[-]d{2}"/><span class="alert__text contact__tel-text">Телефон не указан</span>
     </label>
     <label class="contact-form__title" for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
       <input class="contact-form__field" id="email" type="email"/>
     </label>
-    <label class="contact-form__checkbox contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно 
-      <input class="contact-form__field" id="check" type="checkbox"/>
-      <div class="contact-form__custom-check"></div><a class="contact-form__link" href="#">политике конфиденциальности </a>
+    <label class="contact-form__checkbox contact-form__title" for="contact-check">Я даю согласие на обработку моих персональных данных согласно 
+      <input class="contact-form__field" id="contact-check" type="checkbox" checked="checked"/>
+      <div class="contact-form__custom-check"></div><a class="contact-form__link" href="#">политике конфиденциальности </a><span class="alert__text contact__check-text">Обязательное поле </span>
     </label>
     <button class="btn contact-form__btn" type="submit">Отправить запрос</button>
   </form>
