--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -54,6 +54,9 @@
                 margin: 0 0 10px 0;
             }
         }
+        @media (max-width: 960px) {
+            font-size: 13px;
+        }
     }
     &-logo {
         grid-column: 6 / 8;
@@ -104,10 +107,13 @@
             line-height: 20px;
             padding: 0;
         }
+        @media (max-width: 960px) {
+            font-size: 16px;
+        }
     }
     &-btn {
-        grid-column: 6 / 8;
-        grid-row: 2 / 3;
+        grid-column: 6/8;
+        grid-row: 2/3;
         justify-self: center;
         align-self: flex-end;
         .arrow-btn__icon {
@@ -129,13 +135,17 @@
         }
         p {
             color: #423C3A;
-            padding: 130px 0 0 5px;
+            padding: 130px 0 0 10px;
         }
         @media (max-width: 576px) {
             display: none;
         }
         @media (max-width: 812px) and (orientation: landscape) {
             display: none;
+        }
+        @media (max-width: 960px) {
+            grid-column: 6/8;
+            grid-row: 3/4;
         }
     }
     &-backcall {
@@ -146,13 +156,19 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-between;
         &__title {
             font-size: 1rem;
         }
         .btn {
             display: block;
             text-align: center;
-            line-height: 4rem;
+            line-height: 50px;
+            height: 50px;
+            @media (max-width: 960px) {
+                font-size: 12px;
+                padding: 0 1.3rem;
+            }
         }
         @media (max-width: 576px) {
             grid-column: 2 / 12;
@@ -172,6 +188,9 @@
                 line-height: 23px;
                 margin-bottom: 30px;
             }
+        }
+        @media (max-width: 960px) {
+            grid-column: 7 / 10;
         }
     }
     &-social {
@@ -236,6 +255,9 @@
                 margin-bottom: 20px;
             }
         }
+        @media (max-width: 960px) {
+            grid-column: 10 / 13;
+        }
     }
     &-copyright {
         grid-column: 1 / 13;
@@ -254,6 +276,10 @@
             grid-row: 6 / 7;
             margin: 15px 0 0;
         }
+        @media (max-width: 960px) {
+            grid-column: 1/13;
+            grid-row: 4/5;
+        }
     }
     .footer-newsletter {
         grid-column: 1 / 6;
@@ -267,6 +293,9 @@
             grid-column: 2 / 12;
             grid-row: 5 / 6;
             margin-top: 30px;
+        }
+        @media (max-width: 960px) {
+            grid-column: 1 / 7;
         }
         &__form {
             display: grid;
@@ -330,6 +359,9 @@
                 margin: 0 0 30px 0;
                 padding: .5rem 0;
             }
+            // @media (max-width: 960px) {
+            //     grid-row: 5/6;
+            // }
         }
         &__btn {
             grid-column: 4 / 7;
@@ -345,6 +377,10 @@
                 font-size: 16px;
                 line-height: 20px;
                 margin: 0 auto;
+            }
+            @media (max-width: 960px) {
+                font-size: 12px;
+                padding: 0 1rem;
             }
         }
     }
