--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -6,6 +6,9 @@
 }
 
 .contact-form {
+    .alert__text {
+        font-size: 11px;
+    }
     &__headline {
         font-style: normal;
         font-weight: normal;
@@ -30,6 +33,7 @@
         flex-direction: column;
         text-transform: uppercase;
         font-size: 1.25rem;
+        position: relative;
         @media (max-width: 576px) {
             font-weight: normal;
             font-size: 16px;
@@ -41,6 +45,9 @@
             font-size: 18px;
             line-height: 20px;
             margin: 0;
+        }
+        @media (max-width: 1024px) {
+            font-size: .9rem;
         }
         &:nth-child(2) {
             grid-column: 1 / 5;
@@ -87,6 +94,10 @@
         border-bottom: 2px solid #FFFFFF;
         padding: .2rem 0;
         color: #FFFFFF;
+        position: relative;
+        &--red {
+            border-color: #EB5757;
+        }
         @media (max-width: 576px) {
             padding: 0;
         }
@@ -96,9 +107,9 @@
     }
     &__custom-check {
         cursor: pointer;
-        @include pos($t: 50%, $l: -30px);
+        @include pos($t: 2px, $l: -30px);
         @include size(20px);
-        transform: translateY(-50%);
+        //transform: translateY(-50%);
         background: #FFFFFF;
         border: 1px solid #828282;
         border-radius: 3px;
