add burger menu fix; footer mobile fix

--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -64,7 +64,7 @@
   </ul>
 </div>
 <div class="mobile-menu">
-  <svg class="mobile-menu__icon">
-    <use xlink:href="images/main-page_icons-sprite.svg#menu icon"></use>
-  </svg>
+  <div class="mobile-menu__icon">
+    <!--use(xlink:href="images/main-page_icons-sprite.svg#menu icon")-->
+  </div>
 </div>
