--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -72,6 +72,6 @@
 
 
 .mobile-menu
-    svg.mobile-menu__icon
-        use(xlink:href="images/main-page_icons-sprite.svg#menu icon")
+    .mobile-menu__icon
+        //use(xlink:href="images/main-page_icons-sprite.svg#menu icon")
     
