--- a/app/scss/modules/_sidebar.scss
+++ b/app/scss/modules/_sidebar.scss
@@ -320,12 +320,56 @@
         display: none;
         position: absolute;
         justify-content: space-between;
-        top: 30px;
+        top: 45px;
         left: 30px;
         z-index: 10;
+        //background: red;
+        width: 35px;
+        height: 22px;
+        padding: 10px 0 0 0;
         &__icon {
-            @include size(55px);
-            fill: #FFFFFF;
+            //@include size(55px);
+            //fill: #FFFFFF;
+            width: 25px;
+            height: 2px;
+            display: block;
+            background: #FFFFFF;
+            position: relative;
+            &::before {
+                width: 20px;
+                height: 2px;
+                position: absolute;
+                left: -3px;
+                content: "";
+                background: #FFFFFF;
+                transition: all .3s;
+                top: -10px;
+                left: 0;
+            }
+            &::after {
+                width: 35px;
+                height: 2px;
+                position: absolute;
+                left: -3px;
+                content: "";
+                background: #FFFFFF;
+                transition: all .3s;
+                top: 10px;
+                left: 0;
+            }
+            &--active {
+                background: transparent;
+                &:before {
+                    transform: rotate(45deg);
+                    transform-origin: 0 0;
+                    width: 30px;
+                }
+                &:after {
+                    width: 30px;
+                    transform: rotate(-45deg);
+                    transform-origin: 0 100%;
+                }
+            }
         }
         @media (max-width: 576px) {
             display: block;
