add object page; sidebar fix for 1366 resolution;

--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -28,9 +28,9 @@
 .menu
     ul.menu-top      
         li.menu-item
-            a.link--active(href="#") Главная
+            a.link--active(href="index.html") Главная
         li.menu-item
-            a(href="#") Объекты
+            a(href="object.html") Объекты
         li.menu-item
             a(href="#") Квартиры
         li.menu-item
