--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -20,3 +20,6 @@
 @import "modules/_section-contact";
 @import "modules/_footer";
 @import "modules/_modal-video";
+@import "modules/_page-object";
+@import "modules/_page-object__info";
+@import "modules/_page-object__modal";
