--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -26,8 +26,8 @@
 </div>
 <div class="menu">
   <ul class="menu-top">     
-    <li class="menu-item"><a class="link--active" href="#">Главная</a></li>
-    <li class="menu-item"><a href="#">Объекты</a></li>
+    <li class="menu-item"><a class="link--active" href="index.html">Главная</a></li>
+    <li class="menu-item"><a href="object.html">Объекты</a></li>
     <li class="menu-item"><a href="#">Квартиры</a></li>
     <li class="menu-item"><a href="#">Галерея</a></li>
     <li class="menu-item"><a href="#">Блог</a></li>
