--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -49,6 +49,7 @@ html(lang="en")
         
         <!--build:js js/main.min.js -->
         script(src="js/libs/jquery.min.js")
+        script(src="js/libs/jquery-ui.js")
         script(src="js/libs/aos.js")
         script(src="js/libs/slick.min.js")
         script(src="js/main.js")
