add page object open;

--- a/app/pug/object.pug
+++ b/app/pug/object.pug
@@ -17,9 +17,9 @@ html(lang="en")
         script(src="http://html5shiv.googlecode.com/svn/trunk/html5.js")
         <![endif]-->
     body.object-body
-        //POPUP START 
+        //INFO START 
         include object/object-info.pug
-        //POPUP END
+        //INFO END
         
         //SIDEBAR
         include layout/sidebar.pug
@@ -53,7 +53,7 @@ html(lang="en")
                             p.item__info Полтава, ул. Сенная, 19
                             p.item__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
                             .item__links
-                                a.arrow-btn.arrow-btn--left(href="#")
+                                a.arrow-btn.arrow-btn--left(href="object-opened.html")
                                     .arrow-btn__icon
                                         svg.icon
                                             use(xlink:href="images/main-page_icons-sprite.svg#arrow")
