--- a/app/scss/modules/_page-object.scss
+++ b/app/scss/modules/_page-object.scss
@@ -40,9 +40,17 @@
     .title {
         font-size: 36px;
         margin: 120px 0 20px;
+        @media (min-width: 1200px) {
+            font-size: 64px;
+            line-height: 78px;
+        }
     }
     .headline {
         margin: 0 0 0 2px;
+        @media (min-width: 1200px) {
+            font-size: 19px;
+            line-height: 23px;
+        }
     }
 }
 
