--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -23,3 +23,4 @@
 @import "modules/_page-object";
 @import "modules/_page-object__info";
 @import "modules/_page-object__modal";
+@import "modules/_page-object-opened";
